--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,23 +23,23 @@ jobs:
         run: |
           python -m flake8
           
-#   build_and_push_to_docker_hub:
-#     name: Push image to Docker Hub
-#     runs-on: ubuntu-latest
-#     needs: test
-#     steps:
-#       - name: Checkout repo name
-#         uses: actions/checkout@v2
-#       - name: Set up Docker Buildx
-#         uses: docker/setup-buildx-action@v1
-#       - name: Login to Docker
-#         uses: docker/login-action@v1
-#         with:
-#          username: ${{ secrets.DOCKER_USERNAME }}
-#          password: ${{ secrets.DOCKER_PASSWORD }}
-#      - name: Push to Docker Hub
-#        uses: docker/build-push-action@v2
-#        with:
-#          context: ./api_foodgram/
-#          push: true
-#          tags: shtrihh88/api_foodgram:latest
+  build_and_push_to_docker_hub:
+    name: Push image to Docker Hub
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - name: Checkout repo name
+        uses: actions/checkout@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to Docker
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push to Docker Hub
+        uses: docker/build-push-action@v2
+        with:
+          context: ./api_foodgram/
+          push: true
+          tags: shtrihh88/api_foodgram:latest
