--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,10 +1,11 @@
 FROM python:3.7-slim
 
-WORKDIR /app
+WORKDIR /backend
 
 COPY requirements.txt .
 
-RUN pip3 install -r ./requirements.txt  --no-cache-dir
+RUN python3 -m pip install --upgrade pip && \
+    pip3 install -r backend/requirements.txt  --no-cache-dir
 
 COPY . .
 
